--- a/Site/public/MinhaHistoria.html
+++ b/Site/public/MinhaHistoria.html
@@ -51,11 +51,11 @@
                 </p>
             </div>
             <div class="carrosel">
-                <ul class="js-scrollRight" id="t200">
-                    <li class="img-js ">
+                <ul class="js-scrollRight" id="tr">
+                    <li class="imagem-js">
                         <img class="minhasImagens" src="../public/assets/Img/euGordo.jpeg" alt="">
                     </li>
-                    <li class="img-js">
+                    <li class="imagem-js">
                         <img class="minhasImagens" src="../public/assets/Img/euMagro.jpeg" alt="">
                     </li>
                 </ul>
