--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -26,7 +26,7 @@
                     </a>
                     <li >|</li>
                     <a href="Dashboard/imc.html">
-                        <li class="liStyle" id="simuir" >Calcule o Imc</li>
+                        <li class="liStyle" id="simuir" style="display: none;">Calcule o Imc</li>
                     </a>
                 </ul>
                 <div class="button">
